test/interaction/Issue5268.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-info-action "*Type-checking*" "Checking Issue5268 (tmp-issue-5268/src/a/Issue5268.agda). " t)
(agda2-status-action "")
(agda2-info-action "*All Errors*" "tmp-issue-5268/src/a/Issue5268.agda:1.1-15: error: [TerminationIssue] Termination checking failed for the following functions: S Problematic calls: S (at tmp-issue-5268/src/a/Issue5268.agda:1.14-15)" nil)
