test/interaction/Issue5268.agda
module Issue5268 where S : Set; S = S
